finish category module , sub-category module
