# app/Models/SubCategory.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class SubCategory extends Model
+{
+    use HasFactory;
+
+    protected $table = 'sub_categories';
+
+    protected $fillable = [
+        'category_id',
+        'name',
+        'image',
+        'is_active',
+    ];
+
+    protected $casts = [
+        'is_active' => 'boolean',
+    ];
+
+    public function category()
+    {
+        return $this->belongsTo(Category::class);
+    }
+}
